--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </span>
                     <br> <br>
                     <span>
-                        &emsp;  You made me a better person lalabs. Sorry ito lang gift ko ngayong Girlfriends day HSHSH. You have shown me what true love means, lagi kang maintindihin sa akin. I want to know tell you that loving you is my greatets joy. 
+                        &emsp;  You made me a better person lalabs. Sorry ito lang gift ko ngayong Girlfriends day HSHSH. You have shown me what true love means, lagi kang maintindihin sa akin. I want to tell you that loving you is my greatest joy. 
                     <span>
                         &emsp; Thank you for choosing me, for loving me, and for being the best girlfriend in the world.
                     </span>    
