--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <span>
                         &emsp;  You made me a better person lalabs. Sorry ito lang gift ko ngayong Girlfriends day HSHSH. You have shown me what true love means, lagi kang maintindihin sa akin. I want to tell you that loving you is my greatest joy. 
                     <span>
-                        &emsp; Thank you for choosing me, for loving me, and for being the best girlfriend in the world.
+                        &emsp; Thank you for choosing me, for loving me, and for being the best girlfriend in the world. I love you so so so so much lalabs.
                     </span>    
                 </p>
                 <br>
